--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "fingerpose": "^0.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "5.0.0",
     "react-webcam": "^6.0.0",
     "web-vitals": "^0.2.4",
